--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+:root {
+  height: 100%;
+}
+
+.scrollbar-thin::-webkit-scrollbar {
+  @apply w-0 h-2
+}
+
+.scrollbar-track-gray-200::-webkit-scrollbar-track {
+  @apply bg-gray-200
+}
+
+.scrollbar-thumb-dark-gray-400::-webkit-scrollbar-thumb {
+  @apply bg-gray-400 rounded-full border-2 border-gray-400
+
+}
+
+.scrollbar-hover-black::-webkit-scrollbar-thumb:hover {
+  @apply bg-black
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
