--- a/app/globals.css
+++ b/app/globals.css
@@ -2,74 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
+#root,
 html,
-body,
-:root {
-  height: 100%;
+body {
+    height: 100%;
 }
 
 .scrollbar-thin::-webkit-scrollbar {
-  @apply w-0 h-2
+    @apply w-0 h-2
 }
 
 .scrollbar-track-gray-200::-webkit-scrollbar-track {
-  @apply bg-gray-200
+    @apply bg-gray-200
 }
 
 .scrollbar-thumb-dark-gray-400::-webkit-scrollbar-thumb {
-  @apply bg-gray-400 rounded-full border-2 border-gray-400
+    @apply bg-gray-400 rounded-full border-2 border-gray-400
 
 }
 
 .scrollbar-hover-black::-webkit-scrollbar-thumb:hover {
-  @apply bg-black
+    @apply bg-black
 }
 
 @layer utilities {
-  .css-invert {
-    @apply invert-[50%] brightness-200;
-  }
+    .css-invert {
+        @apply invert-[50%] brightness-200;
+    }
 
-  .custom-scrollbar::-webkit-scrollbar {
-    width: 3px;
-    height: 3px;
-    border-radius: 2px;
-  }
+    .custom-scrollbar::-webkit-scrollbar {
+        width: 3px;
+        height: 3px;
+        border-radius: 2px;
+    }
 
-  .custom-scrollbar::-webkit-scrollbar-track {
-    background: #09090a;
-  }
+    .custom-scrollbar::-webkit-scrollbar-track {
+        background: #09090a;
+    }
 
-  .custom-scrollbar::-webkit-scrollbar-thumb {
-    background: #5c5c7b;
-    border-radius: 50px;
-  }
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: #5c5c7b;
+        border-radius: 50px;
+    }
 
-  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background: #7878a3;
-  }
-}
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+        background: #7878a3;
+    }
 }
