--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-#root,
 html,
-body {
+body,
+:root {
     height: 100%;
+    background-color: black;
+    color: white;
+    color-scheme: black;
 }
 
 .scrollbar-thin::-webkit-scrollbar {
