--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body,
-:root {
+
+body {
     height: 100%;
     background-color: black;
     color: white;
